--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "mysql2": "^3.10.3",
+    "nodemailer": "^6.9.14",
     "path": "^0.12.7",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
